<resources>
    <string name="app_name">여기렌탈</string>

    <!--  LoginActivity  -->
    <string name="client_login">일반 사용자</string>
    <string name="owner_login">업주 사용자</string>
    <string name="id">아이디</string>
    <string name="id_id">아이디 (ID)</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="auto_login">자동로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="toast_check_id_pw">로그인 실패\n아이디 / 비밀번호를 확인하세요</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="login_failed">로그인실패</string>
    <string name="login_or_not">로그인 후 이용하시겠습니까?</string>

    <!--  TermsActivity  -->
    <string name="terms_and_policy">약관 및 정책</string>
    <string name="terms">이용약관</string>
    <string name="policy">개인정보보호정책</string>
    <string name="agree_all">모든 약관에 동의합니다</string>
    <string name="agree_terms">이용 약관에 동의합니다</string>
    <string name="agree_policy">개인정보 보호정책에 동의합니다</string>
    <string name="toast_agree">이용약관 및 개인정보보호정책에 동의해주세요</string>

    <!--  SignUpAcitvity  -->
    <string name="duplication_check">중복확인</string>
    <string name="name_hint">실명을 입력하세요</string>
    <string name="password_hint">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="phone_number">휴대전화</string>
    <string name="phone_number_hint">\'-\' 구분없이 입력</string>
    <string name="email">이메일</string>
    <string name="complete">완료</string>
    <string name="id_is_exist">이미 존재하는 아이디입니다</string>
    <string name="confirm">확인</string>
    <string name="toast_type_id">아이디를 입력하세요</string>
    <string name="u_typed">입력하신</string>
    <string name="can_use_id">사용하실 수 있는 ID입니다.</string>
    <string name="use_id">아이디 사용하기</string>
    <string name="toast_type_pw">비밀번호를 입력하세요</string>
    <string name="toast_type_pw2">비밀번호를 확인하세요</string>
    <string name="toast_type_name">이름을 입력하세요</string>
    <string name="toast_type_cp">전화번호를 입력하세요</string>
    <string name="toast_type_email">이메일을 입력하세요</string>
    <string name="sign_up_complete">회원가입 완료</string>
    <string name="toast_check_dup">아이디 중복을 확인하세요</string>
    <string name="client_sign_up">일반 회원가입</string>
    <string name="owner_sign_up">업주 회원가입</string>
    <string name="cong_sign_up">회원가입을 축하드립니다\n로그인 후 이용해 주세요.</string>

    <!--  ClientMainActivity  -->
    <string name="distance_order">거리순</string>
    <string name="edit_info">정보수정</string>
    <string name="review">리뷰</string>
    <string name="logout">로그아웃</string>
    <string name="denied_gps">위치 정보 접근 권한을 거부하시면 앱을 사용할 수 없습니다</string>
    <string name="edit_complete">정보 수정 완료</string>
    <string name="need_login">로그인이 필요합니다</string>

    <!--  ShopInfoFragment  -->
    <string name="write_review">리뷰 작성</string>
    <string name="user_review">사용자 리뷰</string>
    <string name="no_review">사용자 리뷰 없음</string>
    <string name="review_list">리뷰 목록</string>
    <string name="register_review">리뷰 등록</string>
    <string name="cant_find">일치하는 정보가 없습니다</string>
    <string name="result">결과</string>
    <string name="your_id_is">회원님의 가입된 아이디는 다음과 같습니다.</string>
    <string name="delete_shop">업체삭제</string>
    <string name="toast_delete_shop">업체를 삭제했습니다</string>
    <string name="dialog_delete_shop">업체를 삭제합니다</string>

    <!--  AllReviewActivity  -->
    <string name="my">내</string>
    <string name="no_reviews">작성하신 리뷰가 없어요..</string>

    <!--  OwnerMainActivity  -->
    <string name="my_shop_list">내 업체</string>
    <string name="register_your_shop">업체를 등록하세요</string>
    <string name="register_shop">업체등록</string>
    <string name="edit_shop_info">업체정보 수정</string>

    <!--  RegisterShopActivity  -->
    <string name="shop_name">업체명</string>
    <string name="tel_number">전화번호</string>
    <string name="address">주소</string>
    <string name="address_hint">주소 입력</string>
    <string name="keyword">키워드</string>
    <string name="keyword_hint">키워드 입력</string>
    <string name="shop_description">업체 소개</string>
    <string name="toast_type_shop_name">업체명을 입력하세요</string>
    <string name="pictures">사진</string>
    <string name="toast_ext_read_denied">저장소 접근 권한을 거부하시면 이미지를 업로드 할 수 없습니다.</string>
    <string name="request_approval">승인 요청</string>
    <string name="toast_request_approval_complete">업체등록 요청 완료</string>
    <string name="toast_photo_limit">업체사진은 5장까지 등록가능합니다</string>
    <string name="toast_delete_review">리뷰를 삭제했습니다</string>
    <string name="dialog_delete_review">리뷰를 삭제합니다</string>
    <string name="temp_password">임시 비밀번호</string>
    <string name="toast_select_image">사진을 하나 이상 선택하세요</string>
    <string name="toast_request_edit_complete">업체수정 요청 완료</string>
    <string name="hint_type_shop_name">업체명 입력</string>

    <string name="toast_type_review">리뷰 내용을 작성하세요</string>
    <string name="toast_set_rating">별점을 매겨주세요</string>
    <string name="search_location">주소로 검색</string>
    <string name="cancel">취소</string>
    <string name="toast_request_failed">요청 실패 다시 시도하세요</string>

    <!--  EditPicturesActivity  -->
    <string name="edit_shop_pictures">업체사진 수정</string>
    <string name="edit_pictures">사진수정</string>
    <string name="dialog_delete_picture">사진을 삭제합니다</string>
    <string name="toast_must_have_picture">사진은 하나 이상 있어야 합니다.</string>
    <string name="toast_main_has_border">선택하여 파란 테두리로 표시한 사진은 메인이 됩니다</string>
    <string name="toast_main_already_selected">메인 사진이 이미 선택되어 있습니다</string>
    <string name="toast_main_pic_changed">메인 사진 변경됨</string>
    <string name="toast_cannot_remove_main">메인 사진은 삭제할 수 없습니다</string>
    <string name="toast_type_address">주소를 입력하세요</string>
    <string name="toast_check_items">임대 장비를 선택하세요</string>
    <string name="toast_type_info">소개글을 입력하세요</string>
    <string name="toast_finish_on_twice_pressed">뒤로 버튼을 한 번 더 누르면 종료됩니다</string>
    <string name="business_card">명함</string>
    <string name="toast_select_bcImage">명함 사진을 선택하세요</string>
    <string name="shop_item_kinds">임대 장비 종류</string>
    <string name="aerialPlatform">고소작업대</string>
    <string name="forkLift">지게차</string>
    <string name="towerCrane">타워크레인</string>
    <string name="job_kinds">직종</string>
    <string name="electric">전기</string>
    <string name="toast_check_jobs">직종을 하나 이상 선택하세요</string>
    <string name="etc">기타</string>
    <string name="plastere">미장</string>
    <string name="iron">철근</string>
    <string name="fireFighting">소방</string>
    <string name="toast_you_are_an_owner">업주 회원입니다</string>
    <string name="use_without_login">로그인 없이 사용</string>

    <string name="company_address">경기도 고양시 덕양구 지도로124번길 14–15, 나동 207호 (토당동, 호일맨션)</string>
    <string name="ceo">대표</string>
    <string name="ceo_name">경기태</string>
    <string name="phone">전화</string>
    <string name="company_phone_number">01081313653</string>
    <string name="fax">팩스</string>
    <string name="company_fax_number">0504–141–3653</string>
    <string name="business">사업자 번호</string>
    <string name="business_number">666–36–00681</string>
    <string name="company_email">gtsolution@naver.com</string>
    <string name="inquiries">문의전화</string>
    <string name="inquiries_number">031–815–3659</string>
    <string name="account">계좌</string>
    <string name="company_account_number">(우리) 1005–803–913059</string>
    <string name="kinds">종류별</string>
</resources>
