<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigationView">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit_info"
            android:icon="@null"
            android:title="@string/edit_info"
            android:checkable="false"/>
        <item
            android:id="@+id/nav_review"
            android:icon="@null"
            android:title="@string/review"
            android:checkable="false" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@null"
            android:title="@string/logout"
            android:checkable="false" />
    </group>

<!--    <item android:title="설정"-->
<!--        android:tooltipText="@string/denied_gps">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_settings"-->
<!--                android:title="@string/denied_gps" />-->
<!--        </menu>-->
<!--    </item>-->
</menu>