<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    tools:context=".view.SignUpActivity"
    android:id="@+id/rootLayout">

    <Button
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/ic_chevron_left_black_24dp"
        android:stateListAnimator="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTextView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <Button
                android:id="@+id/dupCheckButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_color_border"
                android:text="@string/duplication_check"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/idEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/idEditText" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password_hint"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwEditText" />

            <Button
                android:id="@+id/completeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/fill_primary_round_corner"
                android:text="@string/complete"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plasCheckBox" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/cpEditText"
                app:layout_constraintTop_toBottomOf="@+id/cpEditText" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/phone_number"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

            <EditText
                android:id="@+id/cpEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/pwEditText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="text|textPassword"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwEditText2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idEditText" />

            <EditText
                android:id="@+id/idEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/id"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/dupCheckButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_id"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="아이디 (ID)" />

            <EditText
                android:id="@+id/pwEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text|textPassword"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <CheckBox
                android:id="@+id/elecCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/electric"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/jobKindsTextView"
                app:layout_constraintTop_toBottomOf="@+id/jobKindsTextView" />

            <CheckBox
                android:id="@+id/fireCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/fireFighting"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/ironCheckBox"
                app:layout_constraintStart_toEndOf="@+id/elecCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/jobKindsTextView" />

            <CheckBox
                android:id="@+id/ironCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/iron"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fireCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/jobKindsTextView" />

            <CheckBox
                android:id="@+id/plasCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plastere"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/elecCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/elecCheckBox" />

            <CheckBox
                android:id="@+id/etcCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etc"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/fireCheckBox"
                app:layout_constraintStart_toStartOf="@+id/fireCheckBox"
                app:layout_constraintTop_toTopOf="@+id/plasCheckBox" />

            <TextView
                android:id="@+id/jobKindsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/job_kinds"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/emailEditText"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/congTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/cong_sign_up"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTextView"
        tools:visibility="visible" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/fill_primary_round_corner"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congTextView"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>